# email_integration

./: Makefile  dump.rdb  manage.py  pyproject.toml
email_integration/: asgi.py  settings.py  urls.py  wsgi.py
email_integration/mail/: __init__.py  apps.py  consumers.py  forms.py  models.py  urls.py  utils.py  views.py
email_integration/mail/migrations/: 0001_initial.py
email_integration/templates/: base.html
email_integration/templates/mail/: add_account.html  message_list.html
