[tool.poetry]
name = "email-integration"
version = "1.0.0"
description = "Importing e-mail messages from e-mail services"
authors = ["alllexxx1 <alekkorpachyov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
channels = "4.0.0"
channels-redis = "4.1.0"
daphne = "4.0.0"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
python-dateutil = "^2.9.0.post0"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
